--- a/style.css
+++ b/style.css
@@ -63,3 +63,15 @@ input, textarea {
   display: none;
   border-radius: 10px;
 }
+
+.iframe-container {
+  width: 100%;
+  height: 80vh;
+  overflow: hidden;
+}
+
+.iframe-container iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
